Fixing code readability , Adding scrollbar as feature

--- a/src/components/popups/popups-style.css
+++ b/src/components/popups/popups-style.css
@@ -415,9 +415,33 @@ table.allTask-table td.deleteTd {
 /* TABLE ADD NEW TEAM */
 .allTeam-table-container{
   max-height: 200px;
-  overflow-y: scroll;
+  overflow-y: auto;
   margin-bottom: 10px;
   margin-top: 10px;
+}
+
+
+/* width */
+.allTeam-table-container::-webkit-scrollbar {
+  display: block !important;
+  width: 5px;
+}
+
+/* Track */
+.allTeam-table-container::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+.allTeam-table-container::-webkit-scrollbar-thumb {
+  background: black; 
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+.allTeam-table-container::-webkit-scrollbar-thumb:hover {
+  background: black; 
 }
 
 table.allTeam-table {
